resources/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: tgis
  labels:
    app: tgis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tgis
  template:
    metadata:
      labels:
        app: tgis
    spec:
      volumes:
        - name: claim-data
          persistentVolumeClaim:
            claimName: claim-data
        - name: claim-cache
          persistentVolumeClaim:
            claimName: claim-cache
        - name: cache-volume
          emptyDir:
            medium: Memory
            sizeLimit: 1Gi
      containers:
        - resources:
            limits:
              nvidia.com/gpu: '4'
            requests:
              cpu: '2'
              memory: 8Gi
              nvidia.com/gpu: '4'
          terminationMessagePath: /dev/termination-log
          name: tgis
          ports:
            - name: runtime-rest
              containerPort: 8048
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: claim-data
              mountPath: /data
            - name: claim-cache
              mountPath: /.cache
            - name: cache-volume
              mountPath: /dev/shm
          terminationMessagePolicy: File
          image: 'ghcr.io/huggingface/text-generation-inference:latest'
          args:
            - '--model-id'
            - codellama/CodeLlama-13b-hf
            - '--num-shard'
            - '4'
            - '--max-total-tokens'
            - '2048'
            - '--max-input-length'
            - '1600'
            - '--trust-remote-code'
            - '--port'
            - '8048'
            - '--max-batch-prefill-tokens'
            - '2048'
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
      tolerations:
        - key: nvidia.com/gpu
          operator: Exists
          effect: NoSchedule
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
