resources/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tgis
  name: tgis
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8048
    protocol: TCP
    targetPort: 8048
  selector:
    app: tgis
  sessionAffinity: None
  type: ClusterIP
